<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="47dp"
        android:gravity="center"
        android:text="Sign Up"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:autofillHints="Username"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181" />

    <EditText
        android:id="@+id/editTextTextPersonName8"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:autofillHints="Password"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="318dp"
        android:layout_height="58dp"
        android:autofillHints="Re-type Password"
        android:hint="@string/re_type_password"
        android:inputType="textPersonName"
        android:password="true"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName8"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.351" />

    <Button
        android:id="@+id/button2"
        android:layout_width="118dp"
        android:layout_height="56dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="282dp"
        android:layout_height="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName4"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.681">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/accessibility_level"
            android:textSize="17sp" />

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_1_manual_with_poor_ability_very_wide_chair"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_2_manual_with_good_ability"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_3_electric_wheel_chair"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_4_impaired_accessibility_e_g_crutches_prosthetic"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/_5_able_bodied"
            android:textSize="15sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>